added message sending
